# vault67

./: .events.jsonl  .gitignore  Makefile  README.md  engineering_principles_agent.md  engineering_principles_prompt.md  example_agent_run.md  questions.md  repo_context.md  spec.md
.beads/: issues.jsonl  (+1 more)
vault67/: .gitignore  .vault67.conf.example  CODEBERG_MIGRATION.md  Dockerfile  README.md  config.json  plan.md  promtpack.md  pyproject.toml  runs.md  spec.md  vault67  vault67-watch
vault67/.beads/: config.yaml  issues.jsonl
vault67/.repo.git/: FETCH_HEAD  config  index  packed-refs
vault67/.repo.git/logs/: HEAD
vault67/.repo.git/objects/pack/: pack-84766443e70d3f62e9f905f32ea7f01658ea1537.idx  pack-84766443e70d3f62e9f905f32ea7f01658ea1537.pack  pack-84766443e70d3f62e9f905f32ea7f01658ea1537.rev
vault67/.repo.git/worktrees/rig/: FETCH_HEAD  gitdir  index
vault67/.repo.git/worktrees/vault672/: HEAD  gitdir  index
vault67/agents/: architecture.md  ba-translator-v2.sh  ba-translator.sh  ba_translator.md  breakdown.md  engineering_principles.md  engineering_principles.sh  judge.md  judge.sh  lead_developer.md  security.md  spec_enrichment.md  test_strategy.md  test_strategy.sh
vault67/src/vault67_agent/: __init__.py  cli.py
vault67/tests/: test_ast_analyzer.py  test_models.py
vault67/tickets/TCK-000084/: promptpack.md  repo_context.md  runs.md  spec.md  ticket.md
vault67/tickets/TCK-000085/: questions.md  repo_context.md  spec.md  ticket.md
vault67/tickets/TCK-000123/: ticket.md
vault67/vault67/: vault67
vault67/vault67/lib/: helpers.bash
(+80 files in other folders)
